java 9: Avoid deprecated primitive wrapper constructors
Signed-off-by: BJ Hargrave <bj@bjhargrave.com>